change: basePath imports

--- a/src/components/core/BackgroundGrid/Grid.astro
+++ b/src/components/core/BackgroundGrid/Grid.astro
@@ -1,5 +1,5 @@
 ---
-const lineClasses = 'col-span-2 border-l h-full dark:border-white/10 border-dark/10';
+const lineClasses = "col-span-2 border-l h-full dark:border-white/10 border-dark/10"
 ---
 
 <div class={lineClasses}></div>
