--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -1,12 +1,13 @@
 ---
-export { default as BackgroundGrid } from './BackgroundGrid/index.astro';
-export { default as Button } from './Button/index.astro';
-export { default as ButtonMenu } from './ButtonMenu.astro';
-export { default as LangSelector } from './LangSelector.astro';
-export { default as Logo } from './Logo.astro';
-export { default as Marquee } from './Marquee.astro';
-export { default as ProjectsList } from './Projects/List.astro';
-export { default as Sidebar } from './Sidebar/index.astro';
-export { default as SwitchScheme } from './SwitchScheme.astro';
-export { default as Typography } from './Typography/index.astro';
+export { default as BackgroundGrid } from "./BackgroundGrid/index.astro"
+export { default as Button } from "./Button/index.astro"
+export { default as ButtonMenu } from "./ButtonMenu.astro"
+export { default as LangSelector } from "./LangSelector.astro"
+export { default as Logo } from "./Logo.astro"
+export { default as Marquee } from "./Marquee.astro"
+export { default as ProjectsList } from "./Projects/List.astro"
+export { default as Sidebar } from "./Sidebar/index.astro"
+export { default as SwitchScheme } from "./SwitchScheme.astro"
+export { default as Typography } from "./Typography/index.astro"
+export { default as Gallery } from "./Gallery/index.astro"
 ---
