--- a/src/content/index.astro
+++ b/src/content/index.astro
@@ -1,4 +1,4 @@
 ---
-export { default as DATA_EXPERIENCE } from './experience';
-export * from './sections/index.astro';
+export { default as DATA_EXPERIENCE } from "./experience"
+export * from "./sections/index.astro"
 ---
