--- a/src/pages/es/shop/index.astro
+++ b/src/pages/es/shop/index.astro
@@ -1,36 +1,32 @@
 ---
-import ProductsAll from "../../../components/sections/ProductsAll.astro";
-import HeaderPage from "../../../components/ui/HeaderPage.astro";
-import {
-  getLangFromUrl,
-  useTranslatedPath,
-  useTranslations,
-} from "../../../i18n/utils";
-import Layout from "../../../layouts/Layout.astro";
+import ProductsAll from "../../../components/sections/ProductsAll.astro"
+import HeaderPage from "../../../components/ui/HeaderPage.astro"
+import { getLangFromUrl, useTranslatedPath, useTranslations } from "../../../i18n/utils"
+import Layout from "../../../layouts/Layout.astro"
 
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
-const translatePath = useTranslatedPath(lang);
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
+const translatePath = useTranslatedPath(lang)
 
 const breadcrumbs = [
-  {
-    name: t("nav.home"),
-    type: "link",
-    url: translatePath("/"),
-  },
-  {
-    type: "separator",
-  },
-  {
-    name: t("nav.shop"),
-    type: "current",
-  },
-];
+	{
+		name: t("nav.home"),
+		type: "link",
+		url: translatePath("/"),
+	},
+	{
+		type: "separator",
+	},
+	{
+		name: t("nav.shop"),
+		type: "current",
+	},
+]
 ---
 
 <Layout title="Israel Larrondo | Shop">
-  <div class="bg-white dark:bg-dark relative z-10">
-    <HeaderPage title={t("shop.title")} {breadcrumbs} />
-    <ProductsAll />
-  </div>
+	<div class="relative z-10 bg-white dark:bg-dark">
+		<HeaderPage title={t("shop.title")} {breadcrumbs} />
+		<ProductsAll />
+	</div>
 </Layout>
