--- a/src/components/core/Button/index.astro
+++ b/src/components/core/Button/index.astro
@@ -1,52 +1,52 @@
 ---
-import './styles.css';
+import "./styles.css"
 
 interface Props {
-  tag?: 'button' | 'a' | 'span';
-  variant?: 'filled' | 'outlined';
-  size?: 'xs' | 'sm' | 'md' | 'lg' | 'xl';
-  color?: 'primary' | 'secondary' | 'dark' | 'light';
-  class?: string;
-  disabled?: boolean;
-  href?: string;
-  type?: 'button' | 'submit' | 'reset' | undefined | null;
-  target?: '_blank' | '_self' | '_parent' | '_top';
-  rel?: string;
+	tag?: "button" | "a" | "span"
+	variant?: "filled" | "outlined"
+	size?: "xs" | "sm" | "md" | "lg" | "xl"
+	color?: "primary" | "secondary" | "dark" | "light"
+	class?: string
+	disabled?: boolean
+	href?: string
+	type?: "button" | "submit" | "reset" | undefined | null
+	target?: "_blank" | "_self" | "_parent" | "_top"
+	rel?: string
 }
 
-export type ButtonProps = Props;
+export type ButtonProps = Props
 
 const {
-  tag = 'button',
-  variant,
-  size = 'md',
-  disabled = false,
-  color,
-  class: className,
-  href,
-  type,
-  target,
-  rel,
-} = Astro.props;
-const Tag = tag;
+	tag = "button",
+	variant,
+	size = "md",
+	disabled = false,
+	color,
+	class: className,
+	href,
+	type,
+	target,
+	rel,
+} = Astro.props
+const Tag = tag
 ---
 
 <Tag
-  class:list={[
-    'btn',
-    variant && `btn--${variant}`,
-    size && `btn--${size}`,
-    color && `btn--${color}`,
-    disabled && 'btn--disabled',
-    className,
-  ]}
-  type={type}
-  disabled={disabled}
-  href={!disabled ? href: undefined}
-  target={target}
-  rel={rel}
+	class:list={[
+		"btn",
+		variant && `btn--${variant}`,
+		size && `btn--${size}`,
+		color && `btn--${color}`,
+		disabled && "btn--disabled",
+		className,
+	]}
+	type={type}
+	disabled={disabled}
+	href={!disabled ? href : undefined}
+	target={target}
+	rel={rel}
 >
-  <slot name='startIcon' />
-  <slot />
-  <slot name='endIcon' />
+	<slot name="startIcon" />
+	<slot />
+	<slot name="endIcon" />
 </Tag>
