--- a/src/components/core/Projects/List.astro
+++ b/src/components/core/Projects/List.astro
@@ -1,10 +1,10 @@
 ---
-import type { Project } from '../../../types';
-import ProjectCard from './Card.astro';
+import type { Project } from "@/types"
+import ProjectCard from "./Card.astro"
 
-const { projects } = Astro.props;
+const { projects } = Astro.props
 ---
 
-<div class='grid grid-cols-1 md:grid-cols-2 gap-12 md:gap-20'>
-  {projects.map((project: Project) => <ProjectCard project={project} />)}
+<div class="grid grid-cols-1 gap-12 md:grid-cols-2 md:gap-20">
+	{projects.map((project: Project) => <ProjectCard project={project} />)}
 </div>
