--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,36 +1,36 @@
 ---
-import { DATA_EXPERIENCE } from '../../content/index.astro';
-import { getLangFromUrl, useTranslations } from '../../i18n/utils';
-import { Check } from '../icons/index.astro';
-import { Typography } from '../index.astro';
+import { DATA_EXPERIENCE } from "@/content/index.astro"
+import { getLangFromUrl, useTranslations } from "@/i18n/utils"
+import { Check } from "@/components/icons/index.astro"
+import { Typography } from "@/components/index.astro"
 
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
 
-const { jobs }: { jobs: string[] } = DATA_EXPERIENCE[lang] || [];
+const { jobs }: { jobs: string[] } = DATA_EXPERIENCE[lang] || []
 ---
 
 <section
-  class='flex items-center justify-center px-5 pt-8 md:pt-24 pb-14 md:pb-40 bg-white dark:bg-dark relative z-10'
+	class="relative z-10 flex items-center justify-center bg-white px-5 pb-14 pt-8 dark:bg-dark md:pb-40 md:pt-24"
 >
-  <div class='container'>
-    <Typography
-      type='h3'
-      class='h2 dark:text-white max-w-3xl leading-tight text-balance mb-12 md:mb-20'
-    >
-      {t('home.experience.title')}
-    </Typography>
-    <div class='grid grid-cols-2 gap-8 sm:gap-12 md:gap-20'>
-      {
-        jobs.map((text: string) => (
-          <div class='col-span-2 grid gap-4 grid-cols-[2rem_1fr] md:grid-cols-[3rem_1fr] md:col-span-1 text-left'>
-            <div class='w-8 md:w-12 h-8 md:h-12 text-primary-500 dark:text-primary-300'>
-              <Check />
-            </div>
-            <p class='p highlight text-dark dark:text-white text-pretty'>{text}</p>
-          </div>
-        ))
-      }
-    </div>
-  </div>
+	<div class="container">
+		<Typography
+			type="h3"
+			class="h2 mb-12 max-w-3xl text-balance leading-tight dark:text-white md:mb-20"
+		>
+			{t("home.experience.title")}
+		</Typography>
+		<div class="grid grid-cols-2 gap-8 sm:gap-12 md:gap-20">
+			{
+				jobs.map((text: string) => (
+					<div class="col-span-2 grid grid-cols-[2rem_1fr] gap-4 text-left md:col-span-1 md:grid-cols-[3rem_1fr]">
+						<div class="h-8 w-8 text-primary-500 dark:text-primary-300 md:h-12 md:w-12">
+							<Check />
+						</div>
+						<p class="p highlight text-pretty text-dark dark:text-white">{text}</p>
+					</div>
+				))
+			}
+		</div>
+	</div>
 </section>
