--- a/src/components/shared/index.astro
+++ b/src/components/shared/index.astro
@@ -1,4 +1,4 @@
 ---
-export { default as Header } from './Header.astro';
-export { default as Footer } from './Footer.astro';
+export { default as Header } from "./Header.astro"
+export { default as Footer } from "./Footer.astro"
 ---
