--- a/src/components/ui/index.astro
+++ b/src/components/ui/index.astro
@@ -1,6 +1,6 @@
 ---
-export { default as Breadcrumbs } from './Breadcrumbs.astro';
-export { default as HeaderPage } from './HeaderPage.astro';
-export { default as Menu } from './Menu.astro';
-export { default as Nav } from './Nav.astro';
+export { default as Breadcrumbs } from "./Breadcrumbs.astro"
+export { default as HeaderPage } from "./HeaderPage.astro"
+export { default as Menu } from "./Menu.astro"
+export { default as Nav } from "./Nav.astro"
 ---
