--- a/src/content/projects/content/index.astro
+++ b/src/content/projects/content/index.astro
@@ -1,11 +1,11 @@
 ---
-import { default as ProjectEnDemo } from './en/demo.astro';
-import { default as ProjectEsDemo } from './es/demo.astro';
+import { default as ProjectEnDemo } from "./en/demo.astro"
+import { default as ProjectEsDemo } from "./es/demo.astro"
 
 export const PROJECTS_CONTENT: Record<string, any> = {
-  'mocho-store': {
-    en: ProjectEnDemo,
-    es: ProjectEsDemo,
-  },
-};
+	"mocho-store": {
+		en: ProjectEnDemo,
+		es: ProjectEsDemo,
+	},
+}
 ---
