--- a/src/content/sections/index.astro
+++ b/src/content/sections/index.astro
@@ -1,19 +1,19 @@
 ---
-import AboutEs from './about-es.astro';
-import AboutEn from './about-en.astro';
+import AboutEs from "./about-es.astro"
+import AboutEn from "./about-en.astro"
 
 type SectionContent = {
-  [key: string]: {
-    about: React.ComponentType<any>;
-  };
-};
+	[key: string]: {
+		about: React.ComponentType<any>
+	}
+}
 
-export const SECTIONS_CONTENT: SectionContent  = {
-  es: {
-    about: AboutEs,
-  },
-  en: {
-    about: AboutEn,
-  },
-};
+export const SECTIONS_CONTENT: SectionContent = {
+	es: {
+		about: AboutEs,
+	},
+	en: {
+		about: AboutEn,
+	},
+}
 ---
