--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,3 @@
-@import './main.css';
-@import './timelineAnimation.css';
-@import './mark-text.css';
+@import "./main.css";
+@import "./timelineAnimation.css";
+@import "./mark-text.css";
